--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 </head>
 <body>
 
-<h2>Tree View</h2>
-<p>A tree view represents a hierarchical view of information, where each item can have a number of subitems.</p>
-<p>Click on the arrow(s) to open or close the tree branches.</p>
+<h2>Wrike Test </h2>
+<h3>Tree View from JSON</h3>
 
-<ul id="myUL">
+<!-- <ul id="myUL">
   <li><span class="caret">Beverages</span>
     <ul class="nested">
       <li>Water</li>
@@ -31,12 +30,13 @@
     </ul>
   </li>
 </ul>
-<br>
+<br>-->
 
 
 <div id='test'>
 
 </div>
 <script src="src.js"></script>
+<script src="caret.js"></script>
 </body>
 </html>
