--- a/index.html
+++ b/index.html
@@ -1,40 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h2>Wrike Test </h2>
-<h3>Tree View from JSON</h3>
-
-<!-- <ul id="myUL">
-  <li><span class="caret">Beverages</span>
-    <ul class="nested">
-      <li>Water</li>
-      <li>Coffee</li>
-      <li><span class="caret">Tea</span>
-        <ul class="nested">
-          <li>Black Tea</li>
-          <li>White Tea</li>
-          <li><span class="caret">Green Tea</span>
-            <ul class="nested">
-              <li>Sencha</li>
-              <li>Gyokuro</li>
-              <li>Matcha</li>
-              <li>Pi Lo Chun</li>
-            </ul>
-          </li>
-        </ul>
-      </li>  
-    </ul>
-  </li>
-</ul>
-<br>-->
-
-
-<div id='test'>
-
+  <h2>Wrike Test </h2>
+  <h3>Tree View from JSON</h3>
+  <div id='tree'>
 </div>
 <script src="src.js"></script>
 <script src="caret.js"></script>
