--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Changa:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
